tools/biome/plugins/api-architecture/fixtures/no-dto-inter-module-import/rejected/libs/api/example-dto/test/setup.ts
import '@shipfox/a-dto/inter-module/setup';
